<resources>
    <string name="app_name">RunScore</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">RUNSCORE LOGIN</string>
    <string name="title_activity_race">CARRERA</string>
    <string name="title_activity_detail">DETALLES</string>
    <string name="user">Usuario</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Contraseña</string>
    <string name="login">ENTRAR</string>siempre pasa al final
    <string name="newUser">Registrar</string>
    <string name="newRace">NUEVA CARRERA</string>
    <string name="distance_km">Distancia (Km)</string>
    <string name="ok">OK</string>
    <string name="speed">Velocidad</string>
    <string name="altitude">Altitud</string>
    <string name="pace">Ritmo</string>
    <string name="avgPace">Ritmo Medio</string>
    <string name="score">Puntuación</string>
    <string name="start">Iniciar</string>
    <string name="abort">Abandonar</string>
    <string name="save">Guardar</string>
    <string name="discard">Descartar</string>
    <string name="distance">Distancia</string>
    <string name="Km">Km</string>
    <string name="sin_rival">SR</string>

</resources>
